...
              />
            </View>
          </View>
        )}
      </Pressable>
      <View style={styles.actions}>
        <Pressable onPress={handlePlusIcon} testID="plus-icon">
          {({ pressed }) => (
            <View
              style={[
                styles.circlePlus,
                !isLightTheme && { backgroundColor: "white" },
                pressed && { opacity: 0.7 },
...
